tests/scan/fixtures/validation/negative/clean_go_clean-signal-handler/go.mod
module github.com/example/clean-signal-handler
go 1.21
